--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <hr size="3" noshade>
     <table cellspacing="10">
       <tr>
-        <td><img src="E:\Web development\Images\larbi.jpg" alt="Larbi's picture" height="330" width="250"></td>
+        <td><img src="larbi.jpg" alt="Larbi's picture" height="330" width="250"></td>
         <td>
 
           <h1>Mohamed Larbi Bencheikh Lehocine</h1>
