--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
           <p><em>A student in <strong>Touati El Mekki</strong> highschool</em></p>
           <p>I love:</p>
           <ul>
-            <li>Proggraming</li>
+            <li>Programming</li>
             <li>Tea</li>
             <li>something else</li>
           </ul>
@@ -52,13 +52,18 @@
 
     <table cellspacing="10">
       <tr>
-        <td>drawing</td>
-        <td>★</td>
+        <td>Front-end Developing</td>
+        <td>★★☆☆☆</td>
       </tr>
       <tr>
-        <td>Memorizing</td>
-        <td>★★★</td>
+        <td>Memorizing Things</td>
+        <td>★★★☆☆</td>
       </tr>
+      <tr>
+        <td>Learning</td>
+        <td>★★★☆☆</td>
+      </tr>
+      
     </table>
 
     <br>
