--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
       </tr>
     </table>
 
-    <hr size="3" >
+    <hr size="3" noshade>
 
     <h3>Skills</h3>
 
@@ -66,8 +66,8 @@
       
     </table>
 
-    <br>
-  <a href="contact me.html">Contact me</a>
+    <hr size="3" noshade>
+    <a href="contact me.html">Contact me</a>
   </body>
 
 </html>
