--- a/contact me.html
+++ b/contact me.html
@@ -27,9 +27,9 @@
         <input type="radio" name="Favorite method" value="Phone number" required>Phone number <br>
 
       <label for="">Your name:</label>
-        <input type="text" name="YourName" value="" required> <br>
+        <input type="text" name="YourName" value="" required placeholder:"Joe Biden"> <br>
       <label for="">Your email:</label>
-        <input type="email" name="YourEmail" value="" required> <br>
+        <input type="email" name="YourEmail" value="" required placeholder:"name@example.com"> <br>
       <label for="">Your message:</label> <br>
         <textarea name="YourMessage" rows="10" cols="30" required></textarea><br>
         <input type="submit" name="" value="submit">
