--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <td>
 
           <h1>Mohamed Larbi Bencheikh Lehocine</h1>
-          <p><em>A student in <strong>Touati El Mekki</strong> highschool</em></p>
+          <p><em>A student in <a href="https://www.google.com/search?rlz=1C1OPRA_enDZ579DZ579&sxsrf=ALeKk02s0nOI6wiI0_OB6IEWo5eiulC9yw:1629311538024&q=lycee+touati+al+makki&spell=1&sa=X&ved=2ahUKEwi51s67mrvyAhVOa8AKHcDCBP8QBSgAegQIARAw&biw=1517&bih=730"><strong>Touati El Mekki</strong></a> highschool</em></p>
           <p>I love:</p>
           <ul>
             <li>Programming</li>
