--- a/contact me.html
+++ b/contact me.html
@@ -33,6 +33,7 @@
       <label for="">Your message:</label> <br>
         <textarea name="YourMessage" rows="10" cols="30" required></textarea><br>
         <input type="submit" name="" value="submit">
+        <inpu type="reset" name="" value="reset">
     </form>
 
   </body>
