--- a/index.html
+++ b/index.html
@@ -3,71 +3,93 @@
 
   <head>
     <meta charset="utf-8">
-    <title>🖤Larbi's personal site</title>
+    <title>Larbi's personal site</title>
   </head>
 
   <body>
     <hr size="3" noshade>
     <table cellspacing="10">
       <tr>
-        <td><img src="larbi.jpg" alt="Larbi's picture" height="330" width="250"></td>
+        <td>
+          <img src="larbi.jpg" alt="Larbi's picture" height="330" width="250">
+        </td>
         <td>
 
-          <h1>Mohamed Larbi Bencheikh Lehocine</h1>
-          <p><em>A student in <a href="https://www.google.com/search?rlz=1C1OPRA_enDZ579DZ579&sxsrf=ALeKk02s0nOI6wiI0_OB6IEWo5eiulC9yw:1629311538024&q=lycee+touati+al+makki&spell=1&sa=X&ved=2ahUKEwi51s67mrvyAhVOa8AKHcDCBP8QBSgAegQIARAw&biw=1517&bih=730"><strong>Touati El Mekki</strong></a> highschool</em></p>
+          <h1>Mohamed Larbi <br>Bencheikh Lehocine</h1>
+          <p><em>A student in <strong>Touati El Mekki</strong> highschool</em></p>
           <p>I love:</p>
+
           <ul>
             <li>Programming</li>
             <li>Tea</li>
             <li>something else</li>
           </ul>
+
         </td>
       </tr>
     </table>
 
-
     <hr size="3" noshade>
-    <h3>Some other informations</h3>
-    <table>
-      <tr>
-        <td>Date of Birth</td>
-        <td>12-03-2005</td>
-      <tr>
-        <td>weight</td>
-        <td>60kg</td>
-      </tr>
-      <tr>
-        <td>height</td>
-        <td>1.65m</td>
-      </tr>
-      <tr>
-        <td>last school grade</td>
-        <td>16.65/20</td>
-      </tr>
-    </table>
-
-    <hr size="3" noshade>
-
-    <h3>Skills</h3>
 
     <table cellspacing="10">
-      <tr>
-        <td>Front-end Developing</td>
-        <td>★★☆☆☆</td>
-      </tr>
-      <tr>
-        <td>Memorizing Things</td>
-        <td>★★★☆☆</td>
-      </tr>
-      <tr>
-        <td>Learning</td>
-        <td>★★★☆☆</td>
-      </tr>
-      
+      <thead>
+        <tr>
+          <td colspan="2"><h2>More Informations</h2></td>
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+          <td>Date of Birth	</td>
+          <td>12-03-2005</td>
+        </tr>
+        <tr>
+          <td>Weight</td>
+          <td>60kg</td>
+        </tr>
+        <tr>
+          <td>Height</td>
+          <td>1.67m</td>
+        </tr>
+        <tr>
+          <td>Last school grade</td>
+          <td>16.65/20</td>
+        </tr>
+      </tbody>
     </table>
 
     <hr size="3" noshade>
-    <a href="contact me.html">Contact me</a>
+
+    <table cellspacing="10">
+      <thead>
+        <tr>
+          <td colspan="2"><h2>Skills</h2></td>
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+          <td>Front-end Developing	</td>
+          <td>★★☆☆☆</td>
+        </tr>
+        <tr>
+          <td>Memorizing Things	</td>
+          <td>★★★☆☆</td>
+        </tr>
+        <tr>
+          <td>Learning</td>
+          <td>★★★☆☆</td>
+        </tr>
+        <tr>
+          <td>English</td>
+          <td>★★★☆☆</td>
+        </tr>
+      </tbody>
+    </table>
+
+    <hr size="3" noshade>
+
+    <a href="contact-me.html">Contact me</a>
+
   </body>
 
 </html>
+
