--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 
     <hr size="3" noshade>
 
-    <a href="contact-me.html">Contact me</a>
+    <a href="contact me.html">Contact me</a>
 
   </body>
 
