--- a/contact me.html
+++ b/contact me.html
@@ -5,7 +5,9 @@
     <title>Contact me</title>
   </head>
   <body>
+    <hr size="3" noshade>
     <h1>My contact details</h1>
+    <hr size="3" noshade>
     <dl class="">
       <dt><h4>My social media:</h4></dt>
       <dd>
@@ -19,7 +21,7 @@
       <dt><h4>My Phone Number: </h4></dt>
       <dd>+213-676740133</dd>
     </dl>
-
+    <hr size="3" noshade>
     <form action="mailto:arbi8151@gmail.com" method="post" enctype="text/plain">
       <label for="">What is your favorite method to message people:</label> <br>
         <input type="radio" name="Favorite method" value="email" required>email <br>
@@ -35,6 +37,6 @@
         <input type="submit" name="" value="submit">
         <inpu type="reset" name="" value="reset">
     </form>
-
+    <hr size="3" noshade>
   </body>
 </html>
