--- a/index.html
+++ b/index.html
@@ -2,8 +2,9 @@
 <html lang="en" dir="ltr">
 
   <head>
-    <meta charset="utf-8">
     <title>Larbi's personal site</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="wdith=device-wdith, initial-scale=1"
   </head>
 
   <body>
