--- a/contact me.html
+++ b/contact me.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
-    <meta charset="utf-8">
     <title>Contact me</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="wdith=dvice-wdith, initial-sclae=1"
   </head>
   <body>
     <hr size="3" noshade>
