--- a/index.html
+++ b/index.html
@@ -2,14 +2,16 @@
 <html lang="en" dir="ltr">
 
   <head>
-    <title>Larbi's personal site</title>
     <meta charset="utf-8">
-    <meta name="viewport" content="wdith=device-wdith, initial-scale=1"
+    <meta name="viewport" content="width=device-width">
+    <link rel="stylesheet" href="personal.css">
+    <title>Larbi's personal site</title>
   </head>
 
   <body>
-    <hr size="3" noshade>
-    <table cellspacing="10">
+    <hr size="3">
+    <br><br><br>
+    <table cellspacing="10" align="center">
       <tr>
         <td>
           <img src="larbi.jpg" alt="Larbi's picture" height="330" width="250">
@@ -17,7 +19,7 @@
         <td>
 
           <h1>Mohamed Larbi <br>Bencheikh Lehocine</h1>
-          <p><em>A student in <strong>Touati El Mekki</strong> highschool</em></p>
+          <p><em>A student in <u><strong>Touati El Mekki</strong></u> highschool</em></p>
           <p>I love:</p>
 
           <ul>
@@ -29,13 +31,13 @@
         </td>
       </tr>
     </table>
-
-    <hr size="3" noshade>
-
-    <table cellspacing="10">
+    <br><br><br>
+    <hr size="3">
+    <br><br><br>
+    <table cellspacing="10" align="center">
       <thead>
         <tr>
-          <td colspan="2"><h2>More Informations</h2></td>
+          <td colspan="2"><h2>More Information</h2></td>
         </tr>
       </thead>
       <tbody>
@@ -57,10 +59,10 @@
         </tr>
       </tbody>
     </table>
-
-    <hr size="3" noshade>
-
-    <table cellspacing="10">
+    <br><br><br>
+    <hr size="3">
+    <br><br><br>
+    <table cellspacing="10" align="center">
       <thead>
         <tr>
           <td colspan="2"><h2>Skills</h2></td>
@@ -85,12 +87,14 @@
         </tr>
       </tbody>
     </table>
-
-    <hr size="3" noshade>
-
-    <a href="contact me.html">Contact me</a>
+    <br><br><br>
+    <hr size="3">
+    <br><br><br>
+    <div align="center">
+      <a  href="contact me.html">Contact me</a>
+    </div>
+    
 
   </body>
 
 </html>
-
