--- a/contact me.html
+++ b/contact me.html
@@ -1,43 +1,46 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
-    <title>Contact me</title>
     <meta charset="utf-8">
-    <meta name="viewport" content="wdith=dvice-wdith, initial-sclae=1"
+    <meta name="viewport" content="width=device-width, initial-scale=1"
+    <link rel="stylesheet" href="personal.css">
+    <title>Contact me</title>
   </head>
   <body>
-    <hr size="3" noshade>
-    <h1>My contact details</h1>
-    <hr size="3" noshade>
-    <dl class="">
-      <dt><h4>My social media:</h4></dt>
+    <hr size="3">
+    <h1 align="center">My contact details</h1>
+    <hr size="3">
+    <dl align="center">
+      <dt><h4 style="color: #628395;">My social media:</h4></dt>
       <dd>
         <p>
-          <a href="https://www.instagram.com/m_larbi___/" target="_blank">Instgram </a> <br>
+          <a href="https://www.instagram.com/m_larbi___/" target="_blank">Instagram </a> <br>
           <a href="https://www.facebook.com/princes.kor/" target="_blank">Facebook </a> <br>
         </p>
-      </dd>
-      <dt><h4>My email: </h4></dt>
-      <dd><a href="mailto:arbi8151@gmail.com">arbi8151@gmail.com</a></dd>
-      <dt><h4>My Phone Number: </h4></dt>
+      </dd> <br>
+      <dt><h4 style="color: #628395;">My email: </h4></dt>
+      <dd><a href="mailto:arbi8151@gmail.com">arbi8151@gmail.com</a></dd> <br>
+      <dt><h4 style="color: #628395;">My Phone Number: </h4></dt>
       <dd>+213-676740133</dd>
-    </dl>
-    <hr size="3" noshade>
-    <form action="mailto:arbi8151@gmail.com" method="post" enctype="text/plain">
-      <label for="">What is your favorite method to message people:</label> <br>
-        <input type="radio" name="Favorite method" value="email" required>email <br>
-        <input type="radio" name="Favorite method" value="social media" required>social media <br>
-        <input type="radio" name="Favorite method" value="Phone number" required>Phone number <br>
-
+    </dl> <br><br>
+    <hr size="3">
+    <br><br>
+    <form align="center" action="mailto:arbi8151@gmail.com" method="post" enctype="text/plain">
+      <label for="o">What is your favorite method to message people:</label> <br>
+        <input id="o" type="radio" name="Favorite method" value="email" required>email <br>
+        <input id="o" type="radio" name="Favorite method" value="social media" required>social media <br>
+        <input id="o" type="radio" name="Favorite method" value="Phone number" required>Phone number <br>
+      <br>
       <label for="">Your name:</label>
-        <input type="text" name="YourName" value="" required placeholder:"Joe Biden"> <br>
+        <input type="text" name="YourName" value="" required placeholder="Mohamed"> <br><br>
       <label for="">Your email:</label>
-        <input type="email" name="YourEmail" value="" required placeholder:"name@example.com"> <br>
+        <input type="email" name="YourEmail" value="" required placeholder="name@example.com"> <br><br>
       <label for="">Your message:</label> <br>
-        <textarea name="YourMessage" rows="10" cols="30" required></textarea><br>
+        <textarea name="YourMessage" rows="10" cols="30" required placeholder="text"></textarea><br>
         <input type="submit" name="" value="submit">
         <inpu type="reset" name="" value="reset">
     </form>
-    <hr size="3" noshade>
+    <br><br>
+    <hr size="3">
   </body>
 </html>
