--- a/contact me.html
+++ b/contact me.html
@@ -2,7 +2,6 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1"
     <link rel="stylesheet" href="personal.css">
     <title>Contact me</title>
   </head>
@@ -10,6 +9,7 @@
     <hr size="3">
     <h1 align="center">My contact details</h1>
     <hr size="3">
+    <br>
     <dl align="center">
       <dt><h4 style="color: #628395;">My social media:</h4></dt>
       <dd>
@@ -19,10 +19,10 @@
         </p>
       </dd>
       <dt><h4 style="color: #628395;">My email: </h4></dt>
-      <dd><a href="mailto:arbi8151@gmail.com">arbi8151@gmail.com</a></dd> <br>
+      <dd><a href="mailto:arbi8151@gmail.com">arbi8151@gmail.com</a></dd>
       <dt><h4 style="color: #628395;">My Phone Number: </h4></dt>
       <dd>+213-676740133</dd>
-    </dl> <br><br>
+    </dl> <br>
     <hr size="3">
     <br><br>
     <form align="center" action="mailto:arbi8151@gmail.com" method="post" enctype="text/plain">
